Fix code block syntax and update README link in environment setup instructions

--- a/notebook/note.ipynb
+++ b/notebook/note.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Run the following in **Anaconda Prompt** (as Administrator):\n",
     "\n",
-    "```cmd\n",
+    "```bash\n",
     "setup_dl_env.bat\n",
     "```\n",
     "\n",
@@ -85,7 +85,7 @@
     "* cuDNN setup\n",
     "* PyTorch installation with `pytorch-cuda`\n",
     "\n",
-    "Refer to the provided **[README.md](README.md)**.\n",
+    "Refer to the provided **[README.md](../README.md)**.\n",
     "\n",
     "\n",
     "- [x] You're now ready to build and run deep learning projects with full GPU acceleration!\n"
